removed banner image

--- a/src/app/components/carousel/carousel.html
+++ b/src/app/components/carousel/carousel.html
@@ -1,7 +1,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="hero-banner" src="images/Banner.png" alt="First slide">
+            <img class="hero-banner" src="" alt="First slide">
 
             <div class="carousel-caption d-none d-md-block">
                 <h5 class="hero-text">Endless Recipe, One Cozy Kitchen</h5>
