added minutes word

--- a/src/app/components/recipe-list/recipe-list.html
+++ b/src/app/components/recipe-list/recipe-list.html
@@ -6,10 +6,10 @@
                 <h5 class="card-title">{{item.name}}</h5>
                 <hr/>
                 <p class="card-text">
-                    Preparation Time:{{item.prepTimeMinutes}}
+                    Preparation Time:{{item.prepTimeMinutes}} minutes
                 </p>
                 <p class="card-text">
-                    Cooking Time:{{item.cookTimeMinutes}}
+                    Cooking Time:{{item.cookTimeMinutes}} minutes
                 </p>
                 <a (click)="goToDetailsPage(item.id)" class="btn view-recipe">View Recipe</a>
             </div>
